# koku-xinput-wine

./: .clang-format  CMakeLists.txt  LICENSE  README.md  Toolchain-Windows-i686.cmake  Toolchain-Windows-x86_64.cmake  build.sh  config.cpp  config.h  device.cpp  device.h  jumper.h  main.cpp  main.h  xinput.cpp  xinput.h
hack/CoSetProxyBlanket/: CMakeLists.txt  README.md  device.cpp  device.h  main.cpp
hack/builtinDll/: README.md  build.sh
hack/builtinDll/include/: config.h
hack/builtinDll/xinput1_3/: xinput1_3.spec  xinput1_3_main.c
hack/builtinDll/xinput9_1_0/: xinput9_1_0.spec
test/: ditest.cpp  test.sh  xitest.cpp
xinput1_3/: version.rc  version.res  xinput1_3_main.c
xinput1_4/: version.res
